force-app/main/default/objects/CommercialPlanDetail__c/fields/SellInPreOrderBDateWeek__c.field-meta.xml
<CustomField>
    <fullName>SellInPreOrderBDateWeek__c</fullName>
    <description>Semaine date début d&apos;engagement de commande</description>
    <formula>IF(CEILING( ( SellInPreOrderBDate__c - DATE( YEAR( SellInPreOrderBDate__c ), 1, 1) + 1) / 7) &gt; 52,
52, CEILING( ( SellInPreOrderBDate__c - DATE( YEAR( SellInPreOrderBDate__c ), 1, 1) + 1) / 7))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buy-in order week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>