force-app/main/default/objects/CommercialPlanDetail__c/fields/SellInPreOrderBDateYear__c.field-meta.xml
<CustomField>
    <fullName>SellInPreOrderBDateYear__c</fullName>
    <description>Année date début d&apos;engagement de commande</description>
    <formula>YEAR( SellInPreOrderBDate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approve order Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>