force-app/main/default/objects/CommercialPlanDetail__c/fields/SellInPreOrderEDate__c.field-meta.xml
<CustomField>
    <fullName>SellInPreOrderEDate__c</fullName>
    <description>Date fin d&apos;engagement de commande</description>
    <label>Sell In pre order end date</label>
    <type>Date</type>
</CustomField>