force-app/main/default/objects/CommercialPlanDetail__c/fields/SellInTarget__c.field-meta.xml
<CustomField>
    <fullName>SellInTarget__c</fullName>
    <description>CA prévisionnel (Qté * PAN)</description>
    <formula>NetPricePromo__c * QuantityTarget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sell In Target</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>