force-app/main/default/objects/CommercialPlanDetail__c/fields/SellOutBDate__c.field-meta.xml
<CustomField>
    <fullName>SellOutBDate__c</fullName>
    <description>Date début vente conso pour la ligne</description>
    <label>In-store start date</label>
    <type>Date</type>
</CustomField>