force-app/main/default/objects/CommercialPlanDetail__c/fields/SellOutBDateCP__c.field-meta.xml
<CustomField>
    <fullName>SellOutBDateCP__c</fullName>
    <description>Date début vente conso prévue au niveau de l&apos;event</description>
    <formula>CommercialPlan__r.SellOutBDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Start Date</label>
    <type>Date</type>
</CustomField>