force-app/main/default/objects/CommercialPlanDetail__c/fields/SellOutDiscountMassValueLanded__c.field-meta.xml
<CustomField>
    <fullName>SellOutDiscountMassValueLanded__c</fullName>
    <description>Valorisation en masse de la remise, total de la valeur de contribution pour la remise (Qtté attterit *  Tx de remontée *Prix HT * % de la remise)</description>
    <formula>null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sell Out Discount Mass Value Landed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>