force-app/main/default/objects/CommercialPlanDetail__c/fields/SellOutDiscountType__c.field-meta.xml
<CustomField>
    <fullName>SellOutDiscountType__c</fullName>
    <description>Remise promotionelle pour le client</description>
    <label>Mechanic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RI_20</fullName>
            </value>
            <value>
                <fullName>RI_25</fullName>
            </value>
            <value>
                <fullName>RI_30</fullName>
            </value>
            <value>
                <fullName>RI_34</fullName>
            </value>
            <value>
                <fullName>CR_10</fullName>
            </value>
            <value>
                <fullName>CR_20</fullName>
            </value>
            <value>
                <fullName>CR_25</fullName>
            </value>
            <value>
                <fullName>CR_30</fullName>
            </value>
            <value>
                <fullName>CR_34</fullName>
            </value>
            <value>
                <fullName>CRLV_25</fullName>
            </value>
            <value>
                <fullName>CRLV_30</fullName>
            </value>
            <value>
                <fullName>CRLV_34</fullName>
            </value>
            <value>
                <fullName>VR_20</fullName>
            </value>
            <value>
                <fullName>VR_25</fullName>
            </value>
            <value>
                <fullName>VR_30</fullName>
            </value>
            <value>
                <fullName>VR_34</fullName>
            </value>
            <value>
                <fullName>VR32_33</fullName>
            </value>
            <value>
                <fullName>VR43_25</fullName>
            </value>
            <value>
                <fullName>RD 0</fullName>
            </value>
            <value>
                <fullName>20 €</fullName>
            </value>
            <value>
                <fullName>30 €</fullName>
            </value>
            <value>
                <fullName>40 €</fullName>
            </value>
            <value>
                <fullName>50 €</fullName>
            </value>
            <value>
                <fullName>FID 0</fullName>
            </value>
            <value>
                <fullName>90 €</fullName>
            </value>
            <value>
                <fullName>BAD_20</fullName>
            </value>
            <value>
                <fullName>BAD_25</fullName>
            </value>
            <value>
                <fullName>BAD_30</fullName>
            </value>
            <value>
                <fullName>BAD_34</fullName>
            </value>
            <value>
                <fullName>Prix Rond 1€</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>