force-app/main/default/objects/CommercialPlanDetail__c/fields/SellOutDiscountUnitValue__c.field-meta.xml
<CustomField>
    <fullName>SellOutDiscountUnitValue__c</fullName>
    <formula>RetailPricePromowoTax__c * SellOutDiscountValue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sell Out Discount Unit Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>