force-app/main/default/objects/CommercialPlanDetail__c/fields/SellOutDiscountUnitValueInvoice__c.field-meta.xml
<CustomField>
    <fullName>SellOutDiscountUnitValueInvoice__c</fullName>
    <description>Remise unitaire appliquée dans la facture</description>
    <label>Sell Out Discount Unit Value Invoice</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>