force-app/main/default/objects/CommercialPlanDetail__c/fields/SellOutEDate__c.field-meta.xml
<CustomField>
    <fullName>SellOutEDate__c</fullName>
    <description>Date fin vente conso pour la ligne</description>
    <label>In-store end date</label>
    <type>Date</type>
</CustomField>