force-app/main/default/objects/CommercialPlanDetail__c/fields/SellOutEDateCP__c.field-meta.xml
<CustomField>
    <fullName>SellOutEDateCP__c</fullName>
    <description>Date fin livraison prévue au niveau de l&apos;event</description>
    <formula>CommercialPlan__r.SellOutEDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event End Date</label>
    <type>Date</type>
</CustomField>