force-app/main/default/objects/CommercialPlanDetail__c/fields/SellOutOfferType__c.field-meta.xml
<CustomField>
    <fullName>SellOutOfferType__c</fullName>
    <label>Offer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NO_Values</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>