force-app/main/default/objects/CommercialPlanDetail__c/fields/Supplier_Product__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DA Fournisseur Mapping</label>
    <referenceTo>Supplier_PG_Mapping__c</referenceTo>
    <relationshipLabel>Commercial Plan Details</relationshipLabel>
    <relationshipName>Commercial_Plan_Details</relationshipName>
    <type>Lookup</type>
</CustomField>