force-app/main/default/objects/CommercialPlanDetail__c/fields/SupplierProduct__c.field-meta.xml
<CustomField>
    <fullName>SupplierProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Product</label>
    <referenceTo>SupplierAssortment__c</referenceTo>
    <relationshipLabel>Commercial Plan Details (Supplier Product)</relationshipLabel>
    <relationshipName>CommercialPlanDetailsSupProduct</relationshipName>
    <type>Lookup</type>
</CustomField>