force-app/main/default/objects/CommercialPlanDetail__c/fields/SupportBy__c.field-meta.xml
<CustomField>
    <fullName>SupportBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Support By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CommercialPlanDetailsSupportBy</relationshipName>
    <type>Lookup</type>
</CustomField>