force-app/main/default/objects/CommercialPlanDetail__c/fields/TariffCostPromo__c.field-meta.xml
<CustomField>
    <fullName>TariffCostPromo__c</fullName>
    <description>PAB HT spécifique pour la promo</description>
    <label>Promo Purchase Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>