force-app/main/default/objects/CommercialPlanDetail__c/fields/TariffCostRegular__c.field-meta.xml
<CustomField>
    <fullName>TariffCostRegular__c</fullName>
    <description>Prix d&apos;achat Brut HT</description>
    <label>Regular Purchase Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>