force-app/main/default/objects/CommercialPlanDetail__c/fields/TradeActivityNumber__c.field-meta.xml
<CustomField>
    <fullName>TradeActivityNumber__c</fullName>
    <label>Trade Activity Number</label>
    <length>60</length>
    <type>Text</type>
</CustomField>