force-app/main/default/objects/CommercialPlanDetail__c/fields/TradeOpType__c.field-meta.xml
<CustomField>
    <fullName>TradeOpType__c</fullName>
    <label>Operation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trade CSN</fullName>
            </value>
            <value>
                <fullName>Trade Apero</fullName>
            </value>
            <value>
                <fullName>Trade Epiphanie</fullName>
            </value>
            <value>
                <fullName>Trade Enseigne</fullName>
            </value>
            <value>
                <fullName>Trade Raclette</fullName>
            </value>
            <value>
                <fullName>Trade Pizza</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>