force-app/main/default/objects/CommercialPlanDetail__c/fields/UnitNeed__c.field-meta.xml
<CustomField>
    <fullName>UnitNeed__c</fullName>
    <label>Unit Need</label>
    <type>TextArea</type>
</CustomField>