force-app/main/default/objects/CommercialPlanDetail__c/fields/UnitNeedClientAllLocation__c.field-meta.xml
<CustomField>
    <fullName>UnitNeedClientAllLocation__c</fullName>
    <description>Client unit need distribution in its POS</description>
    <label>Unit Need Client All location</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>