force-app/main/default/objects/CommercialPlanDetail__c/fields/UnitNeedClientNumber__c.field-meta.xml
<CustomField>
    <fullName>UnitNeedClientNumber__c</fullName>
    <description>Nombre d&apos;UB client auquelle la ligne promo répond</description>
    <label>Unit Need Client Number</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>