force-app/main/default/objects/CommercialPlanDetail__c/fields/UnitNeedDesc__c.field-meta.xml
<CustomField>
    <fullName>UnitNeedDesc__c</fullName>
    <label>Unit Need Desc</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>