force-app/main/default/objects/CommercialPlanDetail__c/fields/VolumeValidate__c.field-meta.xml
<CustomField>
    <fullName>VolumeValidate__c</fullName>
    <label>Invoiced volume (kg)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>