force-app/main/default/objects/CommercialPlanDetail__c/fields/VolumeValidatePartner__c.field-meta.xml
<CustomField>
    <fullName>VolumeValidatePartner__c</fullName>
    <label>Volume Commit Client</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>